feat: add language feature
